shutter (0.80~ppa1) jaunty; urgency=low

  * New features
    -- Added arrow shape to Drawing Tool
    -- Added highlighter/marker to Drawing Tool
    -- Added numbered tags to Drawing Tool
    -- Added crop tool to Drawing Tool
    -- Resize the canvas
    -- Zoomable image preview
    -- New 'Copy filename' action
    -- Added access to 'Recent files'
    -- New watermark plugin
    -- New reflection plugin
    -- New distortion plugin
    -- New 3D rotate plugin		
  * Drawing Tool
    -- LP: #310704
       [object property changes should take immediate effect]
    -- LP: #311578
       [resize canvas]
    -- LP: #312405
       [added numbered tags]
    -- LP: #318452
       [save and restore last used tool]
    -- LP: #322811
       [Add crop tool to drawing tool]
    -- LP: #338809
       [keep tool focus after one usage]
    -- LP: #360254
       [added highlighter/marker]
    -- LP: #364815
       [added arrow shape]
    -- LP: #380790
       [Fullscreen mode]
  * User Interface
    -- Show screenshot menu on right-button click in each tab
    -- Show default application in separate menu item
    -- Show progress dialog when updating plugin information
    -- LP: #338528
       [use icon theme and toolbar style wherever it is possible]
  * Plugins
    -- LP: #264622
       [new watermark plugin]
    -- LP: #342034
       [new reflection plugin]
    -- LP: #374192
       [new distortion plugin]
    -- LP: #375069
       [new 3D rotate plugin]
  * Fixed bugs / minor improvements
    -- Use File::HomeDir instead of $ENV{ 'HOME' }
    -- Use xdg-open instead of gnome-open
    -- LP: #312221
       [Item is drawn in bottom-right point of the cursor]
    -- LP: #336122
       [Ctrl+resize in editor moves the shape]
    -- LP: #338812
       [Better timeout options]
    -- LP: #340503
       [Show item properties on double-click]
    -- LP: #348595
       [keybindings don't work in ubuntu jaunty when using compiz]
    -- LP: #353819